--- a/routine.ipynb
+++ b/routine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x2b66c5285c0>"
+       "<sqlite3.Cursor at 0x7fa1092ee640>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,9 +103,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ProgrammingError",
+     "evalue": "Cannot operate on a closed database.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mProgrammingError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mconn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcommit\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m conn\u001b[38;5;241m.\u001b[39mclose()\n",
+      "\u001b[0;31mProgrammingError\u001b[0m: Cannot operate on a closed database."
+     ]
+    }
+   ],
    "source": [
     "conn.commit()\n",
     "conn.close()"
@@ -113,22 +125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x2b66c4c2140>"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create the 'users' table\n",
+    "conn = sqlite3.connect('LMS.db')\n",
+    "cursor = conn.cursor()\n",
+    "\n",
     "cursor.execute('''\n",
     "    CREATE TABLE IF NOT EXISTS users (\n",
     "        userId INTEGER PRIMARY KEY AUTOINCREMENT,\n",
@@ -137,12 +141,14 @@
     "        userPassword TEXT,              \n",
     "        userRole TEXT CHECK(userRole IN ('Admin', 'Author', 'Instructor', 'Learner'))\n",
     "    )\n",
-    "    ''')"
+    "    ''')\n",
+    "conn.commit()\n",
+    "conn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -190,9 +196,10 @@
     "from sqlalchemy import create_engine, Column, Integer, String, Text, ForeignKey\n",
     "from sqlalchemy.ext.declarative import declarative_base\n",
     "from sqlalchemy.orm import relationship\n",
+    "import sqlalchemy.orm\n",
     "\n",
     "# Define the base model class\n",
-    "Base = declarative_base()\n",
+    "Base = sqlalchemy.orm.declarative_base()\n",
     "\n",
     "# Define the Course model\n",
     "class Course(Base):\n",
@@ -231,9 +238,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected tables have been deleted.\n"
+     ]
+    }
+   ],
    "source": [
     "engine = create_engine('sqlite:///LMS.db')\n",
     "\n",
@@ -244,6 +259,13 @@
     "\n",
     "print(\"Selected tables have been deleted.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
