--- a/routine.ipynb
+++ b/routine.ipynb
@@ -13,6 +13,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flask import Flask, render_template, request, redirect, url_for, jsonify, session, send_file\n",
+    "import sqlite3\n",
+    "import math\n",
+    "from flask import request\n",
+    "from werkzeug.routing import BuildError\n",
+    "from flask_sqlalchemy import SQLAlchemy\n",
+    "from sqlalchemy import create_engine, Column, Integer, String, Text\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "from sqlalchemy.orm import sessionmaker\n",
+    "import sqlalchemy.orm\n",
+    "from sqlalchemy.orm import backref\n",
+    "from sqlalchemy.orm import relationship\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "from datetime import datetime, timedelta\n",
+    "import json\n",
+    "import matplotlib\n",
+    "from io import BytesIO\n",
+    "matplotlib.use('Agg')  # Use a non-interactive backend\n",
+    "from matplotlib.backends.backend_agg import FigureCanvasAgg as FigureCanvas\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -262,6 +291,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('learner_list.csv')\n",
+    "    # Convert 'date' column to datetime for easier filtering\n",
+    "df['date'] = pd.to_datetime(df['date'], format='%d-%m-%Y')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=df.groupby('courseId')['activeSeconds'].sum().sort_values(ascending=False).head(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6807.72, 5940.32, 5794.87, 5662.13, 5110.95, 4446.4 , 4360.86,\n",
+       "       4153.21, 3607.7 , 3574.5 ])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([4, 10, 2, 9, 8, 5, 7, 6, 1, 3], dtype='int64', name='courseId')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Base' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msqlalchemy\u001b[39;00m\n\u001b[0;32m      6\u001b[0m engine \u001b[38;5;241m=\u001b[39m create_engine(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msqlite:///LMS.db\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 7\u001b[0m \u001b[43mBase\u001b[49m\u001b[38;5;241m.\u001b[39mmetadata\u001b[38;5;241m.\u001b[39mbind \u001b[38;5;241m=\u001b[39m engine\n\u001b[0;32m      8\u001b[0m DBSession \u001b[38;5;241m=\u001b[39m sessionmaker(bind\u001b[38;5;241m=\u001b[39mengine)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Drop all tables\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Base' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from flask_sqlalchemy import SQLAlchemy\n",
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy.orm import sessionmaker\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "import sqlalchemy\n",
+    "\n",
+    "Base = sqlalchemy.orm.declarative_base()\n",
+    "engine = create_engine('sqlite:///LMS.db')\n",
+    "Base.metadata.bind = engine\n",
+    "DBSession = sessionmaker(bind=engine)\n",
+    "\n",
+    "\n",
+    "# Drop all tables\n",
+    "Course.__table__.drop(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -284,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
